# saorsa-node

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  S3-vs-Saorsa-Architecture-Analysis.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: production.toml
deploy/monitoring/: grafana-ant-complete.json  grafana-ant-data.json  grafana-ant-metrics.json  grafana-ant-payments.json
deploy/monitoring/grafana/dashboards/: ant-testnet.json
deploy/monitoring/prometheus/: prometheus.yml
deploy/monitoring/prometheus/rules/: ant-alerts.yml
deploy/scripts/: manage-nodes.sh  spawn-nodes.sh  validate-network.sh
deploy/terraform/: main.tf
deploy/terraform/cloud-init/: monitoring.yml  worker.yml
docs/: DESIGN.md  REPLICATION_DESIGN.md  TESTNET_500_NODE_PLAN.md  TESTNET_DEPLOYMENT.md
docs/infrastructure/: INFRASTRUCTURE.md
scripts/: test_e2e.sh
scripts/testnet/: build-and-deploy.sh  check-all.sh  check-health.sh  churn-test.sh  churn-verify.sh  deploy-all.sh  load-test.sh  run-data-tests.sh  setup-limits.sh  spawn-nodes.sh  start-all.sh  start-genesis.sh  start-nodes.sh  start-remaining.sh  stop-all.sh  testnet-endurance.sh  upgrade-test.sh
sign/: release-signing-key.pub
src/: config.rs  devnet.rs  error.rs  lib.rs  logging.rs  node.rs
src/ant_protocol/: chunk.rs  mod.rs
src/client/: chunk_protocol.rs  data_types.rs  file_ops.rs  mod.rs  quantum.rs  self_encrypt.rs
src/metrics/: aggregator.rs  prometheus.rs
src/payment/: cache.rs  metrics.rs  mod.rs  pricing.rs  proof.rs  quote.rs  single_node.rs  verifier.rs  wallet.rs
src/replication/: admission.rs  audit.rs  bootstrap.rs  config.rs  fresh.rs  mod.rs  neighbor_sync.rs  paid_list.rs  protocol.rs  pruning.rs  quorum.rs  scheduling.rs  types.rs
src/storage/: handler.rs  lmdb.rs  mod.rs
src/upgrade/: apply.rs  binary_cache.rs  cache_dir.rs  mod.rs  monitor.rs  release_cache.rs  rollout.rs  signature.rs
systemd/: ant-node.service  saorsa-node.service
tests/e2e/: anvil.rs  complete_payment_e2e.rs  get_latency_bench.rs  harness.rs  integration_tests.rs  live_testnet.rs  merkle_payment.rs  mod.rs  payment_flow.rs  replication.rs  security_attacks.rs  testnet.rs
tests/e2e/data_types/: chunk.rs  graph_entry.rs  mod.rs  pointer.rs  scratchpad.rs
wix/: license.rtf  main.wxs
