[package]
name = "ant-node"
version = "0.7.0"
edition = "2021"
authors = ["David Irvine <david.irvine@maidsafe.net>"]
description = "Pure quantum-proof network node for the Autonomi decentralized network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WithAutonomi/ant-node"
keywords = ["p2p", "decentralized", "quantum-safe", "post-quantum", "dht"]
categories = ["network-programming", "cryptography"]
rust-version = "1.75"

[lib]
name = "ant_node"
path = "src/lib.rs"

[[bin]]
name = "ant-node"
path = "src/bin/ant-node/main.rs"

[[bin]]
name = "ant-devnet"
path = "src/bin/ant-devnet/main.rs"

[dependencies]
# Core (provides EVERYTHING: networking, DHT, security, trust, storage)
saorsa-core = "0.20.0"
saorsa-pqc = "0.5"

# Payment verification - autonomi network lookup + EVM payment
ant-evm = "0.1.19"
evmlib = "0.4.9"
xor_name = "5"
libp2p = "0.56"  # For PeerId in payment proofs
multihash = "0.19"  # For identity multihash in PeerId construction

# Caching - LRU cache for verified XorNames
lru = "0.16.3"
parking_lot = "0.12"  # Efficient mutex for cache

# Storage - LMDB via heed for content-addressed chunk store
heed = "0.22"

# Migration: Decrypt ant-node data (read-only)
aes-gcm-siv = "0.11"
hkdf = "0.12"

self_encryption = "0.35.0"
blake3 = "1"

# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

# Auto-upgrade
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
semver = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"
color-eyre = "0.6"

# Serialization
rmp-serde = "1"
hex = "0.4"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
rand = "0.8"
serde_json = "1"

# Archive extraction for auto-upgrade
flate2 = "1"
tar = "0.4"
zip = "2"

# SHA-256 hashing for binary cache integrity
sha2 = "0.10"

# Cross-platform file locking for upgrade caches
fs2 = "0.4"

# Protocol serialization
postcard = { version = "1.1.3", features = ["use-std"] }

[target.'cfg(windows)'.dependencies]
self-replace = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"
alloy = { version = "1", features = ["node-bindings"] }
serial_test = "3"

# E2E test infrastructure (run with --features test-utils)
[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["test-utils"]

[features]
default = []
# Enable additional diagnostics for development
dev = []
# Expose test helpers (cache_insert, payment_verifier accessor) for
# integration tests and downstream test harnesses.
test-utils = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster builds for development
opt-level = 1

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Allow async functions that will have await statements added later
unused_async = "allow"
# Allow slightly complex functions during initial development
cognitive_complexity = "allow"
# Allow non-const functions during initial development (may need runtime features later)
missing_const_for_fn = "allow"
